--- a/cifar/requirements.txt
+++ b/cifar/requirements.txt
@@ -12,16 +12,16 @@ contourpy==1.3.0
 cycler==0.12.1
 debugpy==1.8.5
 decorator==5.1.1
-diffrax==0.4.1
+diffrax==0.6.0
 dm-tree==0.1.8
 docker-pycreds==0.4.0
 docstring_parser==0.16
-equinox==0.11.2
+equinox==0.11.6
 etils==1.9.4
 exceptiongroup==1.2.2
 executing==2.1.0
 flatbuffers==24.3.25
-flax==0.8.2
+flax==0.9.0
 fonttools==4.53.1
 fsspec==2024.9.0
 gast==0.6.0
@@ -36,45 +36,46 @@ immutabledict==4.2.0
 importlib_resources==6.4.5
 ipykernel==6.29.5
 ipython==8.27.0
-jax==0.4.25
-jax-cuda11-pjrt==0.4.25
-jax-cuda11-plugin==0.4.25
-jaxlib==0.4.25+cuda11.cudnn86
-jaxtyping
+jax==0.4.28
+jax-cuda12-pjrt==0.4.28
+jax-cuda12-plugin==0.4.28
+jaxlib==0.4.28+cuda12.cudnn89
+jaxtyping==0.2.34
 jedi==0.19.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 keras==3.5.0
 kiwisolver==1.4.7
 libclang==18.1.1
-lineax==0.0.4
+lineax==0.0.5
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-ml-dtypes==0.3.1
+ml-dtypes==0.4.1
 ml_collections==0.1.1
 msgpack==1.1.0
 namex==0.0.8
 nest-asyncio==1.6.0
 numpy==1.26.4
-nvidia-cublas-cu11==11.11.3.6
-nvidia-cuda-cupti-cu11==11.8.87
-nvidia-cuda-nvcc-cu11==11.8.89
-nvidia-cuda-nvrtc-cu11==11.8.89
-nvidia-cuda-runtime-cu11==11.8.89
-nvidia-cudnn-cu11==8.9.6.50
-nvidia-cufft-cu11==10.9.0.58
-nvidia-cusolver-cu11==11.4.1.48
-nvidia-cusparse-cu11==11.7.5.86
-nvidia-nccl-cu11==2.15.5
+nvidia-cublas-cu12==12.6.1.4
+nvidia-cuda-cupti-cu12==12.6.68
+nvidia-cuda-nvcc-cu12==12.6.68
+nvidia-cuda-nvrtc-cu12==12.6.68
+nvidia-cuda-runtime-cu12==12.6.68
+nvidia-cudnn-cu12==8.9.7.29
+nvidia-cufft-cu12==11.2.6.59
+nvidia-cusolver-cu12==11.6.4.69
+nvidia-cusparse-cu12==12.5.3.3
+nvidia-nccl-cu12==2.23.4
+nvidia-nvjitlink-cu12==12.6.68
 opt-einsum==3.3.0
-optax==0.2.2
-optimistix==0.0.6
+optax==0.2.3
+optimistix==0.0.7
 optree==0.12.1
-orbax-checkpoint==0.5.1
+orbax-checkpoint==0.6.4
 packaging==24.1
 parso==0.8.4
 pexpect==4.9.0
@@ -107,7 +108,7 @@ tensorflow==2.17.0
 tensorflow-datasets==4.9.6
 tensorflow-io-gcs-filesystem==0.37.1
 tensorflow-metadata==1.15.0
-tensorstore==0.1.74
+tensorstore==0.1.65
 termcolor==2.4.0
 toml==0.10.2
 toolz==0.12.1
